--- a/tbhGanttVisual/package.json
+++ b/tbhGanttVisual/package.json
@@ -15,10 +15,11 @@
   "dependencies": {
     "@types/d3": "5.7.2",
     "d3": "5.12.0",
-    "powerbi-visuals-utils-dataviewutils": "2.2.1",
-    "powerbi-visuals-api": "~3.8.0"
+    "powerbi-visuals-api": "~3.8.0",
+    "powerbi-visuals-utils-dataviewutils": "2.2.1"
   },
   "devDependencies": {
+    "@types/node": "^18.0.3",
     "ts-loader": "6.1.0",
     "tslint": "^5.18.0",
     "tslint-microsoft-contrib": "^6.2.0",
